Update portfolio title to 'Bhavya kokaria'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Personal portfolio — Creative developer fusing F1 speed with Taylor Swift storytelling." />
-  <title>Portfolio — Alexandra Rose</title>
+  <title>Portfolio — Bhavya kokaria</title>
 
   <!-- Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
