--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Stats -->
     <div class="hero-stats" aria-hidden="true">
       <div class="hero-stat">
-        <span class="stat-num" data-target="5" data-suffix="+">0+</span>
+        <span class="stat-num" data-target="10" data-suffix="+">0+</span>
         <span class="stat-label">Projects</span>
       </div>
       <div class="hero-stat">
@@ -170,7 +170,7 @@
 
         <div class="about-card">
           <p class="about-role-tag">Full-Stack Developer &amp; Designer</p>
-          <h3 class="about-name">Bhavya Kokaria<br>Rose</h3>
+          <h3 class="about-name">Bhavya<br>Kokaria</h3>
           <p class="about-desc">
             Based in Delhi NCR, India.<br>
             Building things that move at the speed of thought.
